Bug 1258808 - Part 1: Passing PointerId (Gecko). r=smaug, f=btseng